# bevygame

./: Cargo.toml
src/: 2dgame.rs  audio.rs  bundles.rs  components.rs  foxtrot.rs  game.rs  game2d.rs  gamething.rs  gol.rs  input.rs  loading.rs  lunarlander3d.rs  main.rs  menu.rs  player.rs  space.rs  tests.rs  text2d.rs  tiles.rs  trait_extension.rs
src/foxtrot/: file_system_interaction.rs  ingame_menu.rs  lib.rs  main.rs  movement.rs  particles.rs  shader.rs
src/foxtrot/dev/: dev_editor.rs
src/foxtrot/file_system_interaction/: asset_loading.rs  audio.rs  config.rs  game_state_serialization.rs  level_serialization.rs
src/foxtrot/level_instantiation/: grass.rs  spawning.rs
src/foxtrot/level_instantiation/spawning/: animation_link.rs
src/foxtrot/level_instantiation/spawning/objects/: camera.rs  level.rs  skydome.rs  sunlight.rs  util.rs
src/foxtrot/movement/: navigation.rs
src/foxtrot/particles/: init.rs
src/foxtrot/player_control/camera/: cursor.rs  focus.rs  kind.rs  rig.rs  skydome.rs  ui.rs
src/foxtrot/player_control/camera/rig/: arm.rs
src/foxtrot/util/: trait_extension.rs
src/foxtrot/world_interaction/: dialog.rs
